--- a/app/views/ownerships/_want_button.html.erb
+++ b/app/views/ownerships/_want_button.html.erb
@@ -1,7 +1,7 @@
-<% if current_uer.want?(item) %>
+<% if current_user.want?(item) %>
   <%= form_tag(ownership_path(item.id), method: :delete) do %>
     <%= hidden_field_tag :item_id, item.id %>
-    <%= hidden_field_tag :type, item.type %>
+    <%= hidden_field_tag :type, 'Want' %>
     <%= submit_tag 'Want', class: 'btn btn-success' %>
   <% end %>
 <% else %>
